--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -7,13 +7,23 @@ body {
 }
 
 body {
+    @include a.flexbox($direction: column, $align: center, $justify: center, $gap: a.rem(32));
     position: relative;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     background-color: var(--bg-body);
     height: auto;
     line-height: 1.7;
-    @include a.flexbox($direction: column, $align: center, $justify: center);
+
+    &.game-active {
+        @include a.flexbox($direction: column, $justify: flex-start, $gap: a.rem(80));
+        padding-block-start: a.rem(20);
+
+        @include a.bp($from: "tablet") {
+            padding: 0;
+            @include a.flexbox($direction: column, $justify: center, $gap: a.rem(16));
+        }
+    }
 }
 
 h1,
@@ -22,4 +32,35 @@ h3,
 h4 {
     margin: 0;
     line-height: 1.2;
+}
+
+button {
+    padding: 0;
+}
+
+// [type=radio] {
+//     position: absolute;
+//     opacity: 0;
+//     width: 0;
+//     height: 0;
+// }
+
+// /* IMAGE STYLES */
+// [type=radio]+svg {
+//     cursor: pointer;
+// }
+
+// /* CHECKED STYLES */
+// [type=radio]:checked+svg {
+//     outline: 2px solid #f00;
+// }
+
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
