--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -39,6 +39,8 @@
             font-weight: var(--fw-semi-bold);
             text-transform: uppercase;
         }
+
+        display: none;
     }
 
     .restart-btn {
@@ -52,5 +54,6 @@
         border-left: 0;
         border-radius: a.rem(8);
 
+        display: none;
     }
 }
