--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -2,8 +2,11 @@
 
 .menu {
     width: 100%;
-    @include a.flexbox($direction: column, $align: center, $gap: a.rem(32));
 
+    &__form {
+        @include a.flexbox($direction: column, $align: center, $gap: a.rem(32));
+        width: 100%;
+    }
 
     &__main {
         @include a.flexbox($direction: column, $align: center, $gap: a.rem(32));
@@ -132,6 +135,6 @@
 
     }
 
-    display: none;
+    // display: none;
 
 }
