feat: game logic for checking winner and tie
added hover icons, id to scores, add 'filled' class to occupied board tiles, basic logic for initiating game state, listening to board events, updating turn icons in the header, checking for win/tie on every click on tile, toggle turn and update game state

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -34,6 +34,11 @@
             width: a.rem(20);
         }
 
+        // &__icon-image {
+        //     width: 20px;
+        //     background-col
+        // }
+
         p {
             font-size: var(--fs-medium);
             font-weight: var(--fw-semi-bold);
