feat: display overlay to show winner/tie of game
added icons for game overlay, added logic to show game winner or tie based on outcome

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -54,6 +54,8 @@
     --bg-game-overlay-win-container: var(--darkgreen-500);
     --text-game-overlay-win-message: var(--grey-1000);
     --text-game-overlay-win-player: var(--skyblue-1000);
+    --text-game-overlay-win-player-player1: var(--skyblue-1000);
+    --text-game-overlay-win-player-player2: var(--yellow-500);
 
     --text-game-overlay-win-btn: var(--darkgreen-500);
     --bg-game-overlay-win-quit-btn: var(--grey-1000);
