feat: add initiate next round, restart game, refactor code
added simlified if statements, refactor code to simplify conditions, added restart game logic and next round logic

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -29,10 +29,12 @@
         padding: a.rem(5) a.rem(24);
         border-radius: a.rem(8);
 
-
-        svg {
+        &__icon svg {
             width: a.rem(20);
         }
+
+        // svg {
+        // }
 
         // &__icon-image {
         //     width: 20px;
