feat: add clearing hover icons function and highlighting winning tiles
added functions for clearing hover icons on board reset and highlight winning pattern tiles on winning of game

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -63,6 +63,9 @@
     --bg-game-overlay-win-next-round-btn: var(--yellow-500);
     --border-game-overlay-win-next-round-btn: var(--yellow-1000);
 
+    --bg-game-board-tile-win-X: var(--skyblue-1000);
+    --bg-game-board-tile-win-O: var(--yellow-500);
+
     /* font */
 
     // font-family
