--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -36,7 +36,20 @@ h4 {
 
 button {
     padding: 0;
+    outline: none;
+    border: none;
     cursor: pointer;
+}
+
+.preload-transitions * {
+    // Dry this up a bit with SCSS variable
+    $null-transition: none !important;
+
+    -webkit-transition: $null-transition;
+    -moz-transition: $null-transition;
+    -ms-transition: $null-transition;
+    -o-transition: $null-transition;
+    transition: $null-transition;
 }
 
 // [type=radio] {
