--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -57,10 +57,17 @@
         -webkit-filter: none;
         -moz-filter: none;
         filter: none;
-        background-color: var(--bg-menu-mark-option-checked);
 
         svg {
             color: var(--bg-menu-mark-option-icon-checked);
+        }
+
+        &--X {
+            background-color: var(--bg-menu-mark-option-X-hover);
+        }
+
+        &--O {
+            background-color: var(--bg-menu-mark-option-O-hover);
         }
     }
 
@@ -72,10 +79,7 @@
         border-radius: a.rem(12);
         -webkit-transition: all 100ms ease-in;
         -moz-transition: all 100ms ease-in;
-        transition: all 100ms ease-in;
-        -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
-        -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
-        filter: brightness(1.8) grayscale(1) opacity(.7);
+        transition: all 200ms ease-in;
 
         svg {
             color: var(--bg-menu-mark-option-icon);
@@ -94,11 +98,9 @@
         }
 
         &:hover {
-            -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
-            -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
-            filter: brightness(1.2) grayscale(.5) opacity(.9);
             background-color: var(--bg-menu-mark-option-hover);
         }
+
     }
 
     & .info {
