refactor: refactor script into different modules
added modules splitting functions into different files according to thier use cases, restructure html overlay win container to have two spans, use main.js file in the js directory to load modules, added borders to tiles on hover

Use new main script as root to load all modules for js

--- a/src/scss/components/_board.scss
+++ b/src/scss/components/_board.scss
@@ -47,3 +47,13 @@
 .filled {
     pointer-events: none;
 }
+
+.board__tile.hover-border-X:hover {
+    border: 2px solid #31C3BD;
+    /* X color */
+}
+
+.board__tile.hover-border-O:hover {
+    border: 2px solid #F2B137;
+    /* O color */
+}
