feat: add cpu difficulties and quit game functionality
added cpu difficulty with (easy, medium, hard, and minimax algo) options, added quit button to quit game in-between an ongoing game

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -29,6 +29,8 @@
     --border-bottom-menu-choice-cpu-btn: var(--yellow-1000);
     --bg-menu-choice-player-btn: var(--skyblue-500);
     --border-bottom-menu-choice-player-btn: var(--skyblue-1000);
+    --bg-menu-choice-cpu-difficulty: var(--yellow-500);
+    --bg-menu-choice-cpu-difficulty-options-hover: var(--yellow-1000);
 
     --bg-menu-mark-option-icon: var(--darkgreen-1000);
     --bg-menu-mark-option-icon-checked: var(--darkgreen-1000);
