--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -120,10 +120,81 @@
     &__choice {
         width: 100%;
         height: 50px;
-        font-size: var(--fs-body);
+        font-size: var(--fs-xsmall);
         font-weight: var(--fw-bold);
         text-transform: uppercase;
-        border-radius: a.rem(16);
+        border-radius: a.rem(12);
+
+        &-row {
+            @include a.flexbox($direction: column, $align: center, $gap: a.rem(16));
+            width: 100%;
+
+            @include a.bp($from: "tablet") {
+                @include a.flexbox($direction: row, $align: center, $gap: a.rem(16));
+            }
+        }
+
+        &-custom-select {
+            position: relative;
+            width: auto;
+            font-family: inherit;
+
+            @include a.bp($from: "tablet") {
+                width: 250px;
+            }
+        }
+
+        &-selected {
+            @include a.flexbox($align: center, $justify: center, $gap: a.rem(32));
+            @include a.bottom-border($width: 8px, $color: #{var(--border-bottom-menu-choice-cpu-btn)});
+            font-size: var(--fs-xsmall);
+            font-weight: var(--fw-bold);
+            text-transform: uppercase;
+            height: 50px;
+            padding: 0.5rem 1.5rem;
+            border-radius: a.rem(12);
+            cursor: pointer;
+            background: var(--bg-menu-choice-cpu-difficulty);
+
+            @include a.bp($from: "tablet") {
+                @include a.flexbox($align: center, $justify: space-between);
+            }
+        }
+
+        .arrow {
+            margin-left: 1rem;
+        }
+
+        &-options {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            font-size: var(--fs-xsmall);
+            font-weight: var(--fw-bold);
+            text-transform: uppercase;
+            background: var(--bg-menu-choice-cpu-difficulty);
+            border: none;
+            border-top: none;
+            border-radius: 0 0 a.rem(12) a.rem(12);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+        }
+
+        &-options div {
+            padding: 0.5rem 1.5rem;
+            cursor: pointer;
+        }
+
+        &-options div:hover {
+            background: var(--bg-menu-choice-cpu-difficulty-options-hover);
+            border-radius: a.rem(12);
+        }
+
+        .hidden {
+            display: none;
+        }
+
 
         &--cpu {
             @include a.bottom-border($width: 8px, $color: #{var(--border-bottom-menu-choice-cpu-btn)});
@@ -133,6 +204,10 @@
         &--player {
             @include a.bottom-border($width: 8px, $color: #{var(--border-bottom-menu-choice-player-btn)});
             background-color: var(--bg-menu-choice-player-btn);
+        }
+
+        @include a.bp($from: "tablet") {
+            font-size: var(--fs-body);
         }
 
     }
