--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,6 +4,10 @@
     @include a.flexbox($direction: column, $align: center, $gap: a.rem(32));
     padding-inline: a.rem(20);
 
+    &__buttons {
+        @include a.flexbox($align: center, $gap: a.rem(16));
+    }
+
     &--game-active {
         @include a.flexbox($align: center, $justify: space-between);
         padding-inline: 0;
@@ -59,6 +63,24 @@
         border-left: 0;
         border-radius: a.rem(8);
         transition: all 200ms ease-in-out;
+
+        &:hover {
+            background-color: var(--bg-header-restart-btn-hover);
+        }
+    }
+
+    .quit-btn {
+        @include a.flexbox($align: center, $justify: center);
+        @include a.bottom-border($width: a.rem(5), $color: var(--border-bottom-restart-btn));
+        width: 50px;
+        height: 50px;
+        background-color: var(--bg-header-restart-btn);
+        border-top: 0;
+        border-right: 0;
+        border-left: 0;
+        border-radius: a.rem(8);
+        transition: all 200ms ease-in-out;
+        color: #1F3641;
 
         &:hover {
             background-color: var(--bg-header-restart-btn-hover);
