refactor: cleaned the code with proper formatting and removed console logs

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -52,6 +52,8 @@
 
     --bg-game-board: var(--darkgreen-1000);
     --bg-game-board-tile: var(--darkgreen-500);
+    --border-game-board-tile-X: var(--skyblue-500);
+    --border-game-board-tile-O: var(--yellow-500);
 
     --bg-game-stats-player1: var(--skyblue-1000);
     --bg-game-stats-ties: var(--grey-1000);
