--- a/src/scss/components/_overlay.scss
+++ b/src/scss/components/_overlay.scss
@@ -7,22 +7,18 @@
     background-color: var(--bg-game-overlay);
     -webkit-backdrop-filter: blur(2px);
     backdrop-filter: blur(2px);
-    transition: opacity 0.3s ease-in-out;
-
     opacity: 0;
     visibility: hidden;
     transform: translateY(-50px);
     transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
 
-    &__win-container {
-        @include a.flexbox($direction: column, $align: center, $justify: center, $gap: a.rem(32));
-        padding-block: a.rem(48);
-        width: 100%;
-        background-color: var(--bg-game-overlay-win-container);
-        text-transform: uppercase;
+    &--visible {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
     }
 
-    &__quit-container {
+    &__container {
         @include a.flexbox($direction: column, $align: center, $justify: center, $gap: a.rem(32));
         padding-block: a.rem(48);
         width: 100%;
@@ -34,15 +30,16 @@
         color: var(--text-game-overlay-win-message);
         font-size: var(--fs-body);
         font-weight: var(--fw-semi-bold);
-        letter-spacing: 1.2px;
+        letter-spacing: a.rem(1.2);
     }
 
-    &__win-player {
+    &__win-player,
+    &__quit-message {
         @include a.flexbox($direction: column, $align: center, $gap: a.rem(32));
         color: var(--text-game-overlay-win-player);
         font-size: var(--fs-medium);
         font-weight: var(--fw-bold);
-        letter-spacing: 1.2px;
+        letter-spacing: a.rem(1.2);
 
         &--X {
             color: var(--text-game-overlay-win-player-player1);
@@ -64,39 +61,17 @@
         }
     }
 
-    &__quit-message {
-        @include a.flexbox($direction: column, $align: center, $gap: a.rem(32));
-        color: var(--text-game-overlay-win-player);
-        font-size: var(--fs-medium);
-        font-weight: var(--fw-bold);
-        letter-spacing: 1.2px;
-
-        @include a.bp($from: "tablet") {
-            @include a.flexbox($direction: row, $align: center, $gap: a.rem(16));
-            font-size: var(--fs-large);
-        }
-
-        @include a.bp($from: "desktop") {
-            @include a.flexbox($direction: row, $align: center, $gap: a.rem(32));
-            font-size: var(--fs-xlarge);
-        }
-    }
-
     &__win-icon {
-        width: 64px;
+        width: a.rem(64);
     }
 
-    &__win-buttons {
+    &__buttons {
         @include a.flexbox($align: center, $gap: a.rem(16));
     }
 
-    &__quit-buttons {
-        @include a.flexbox($align: center, $gap: a.rem(16));
-    }
-
-    &__win-btn {
+    &__btn {
         @include a.flexbox($align: center, $justify: center);
-        height: 40px;
+        height: a.rem(40);
         font-size: var(--fs-body);
         font-weight: var(--fw-bold);
         text-transform: uppercase;
@@ -105,52 +80,25 @@
         border-radius: a.rem(12);
         color: var(--text-game-overlay-win-btn);
 
-        &--quit {
-            @include a.bottom-border($width: 8px, $color: var(--border-game-overlay-win-quit-btn));
-            background-color: var(--bg-game-overlay-win-quit-btn);
-        }
-
-        &--next-round {
-            @include a.bottom-border($width: 8px, $color: var(--border-game-overlay-win-next-round-btn));
-            background-color: var(--bg-game-overlay-win-next-round-btn);
-        }
-
-        @include a.bp($from: "tablet") {
-            font-size: var(--fs-medium);
-            padding: a.rem(24);
-        }
-    }
-
-    &__quit-btn {
-        @include a.flexbox($align: center, $justify: center);
-        height: 40px;
-        font-size: var(--fs-body);
-        font-weight: var(--fw-bold);
-        text-transform: uppercase;
-        padding: a.rem(16);
-        border: none;
-        border-radius: a.rem(12);
-        color: var(--text-game-overlay-win-btn);
-
+        &--quit,
         &--confirm {
             @include a.bottom-border($width: 8px, $color: var(--border-game-overlay-win-quit-btn));
             background-color: var(--bg-game-overlay-win-quit-btn);
         }
 
+        &--next-round,
         &--cancel {
             @include a.bottom-border($width: 8px, $color: var(--border-game-overlay-win-next-round-btn));
             background-color: var(--bg-game-overlay-win-next-round-btn);
+        }
+
+        &:active {
+            border: none;
         }
 
         @include a.bp($from: "tablet") {
             font-size: var(--fs-medium);
             padding: a.rem(24);
         }
-    }
-
-    &--visible {
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0);
     }
 }
