--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -39,6 +39,11 @@ button {
     outline: none;
     border: none;
     cursor: pointer;
+
+    &:focus-visible {
+        outline: 2px solid var(--grey-500);
+        outline-offset: 4px;
+    }
 }
 
 .preload-transitions * {
