style: add accessible html and fallback fonts

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -78,7 +78,7 @@
     /* font */
 
     // font-family
-    --ff-primary: "Outfit", sans-serif;
+    --ff-primary: "Outfit", system-ui, sans-serif;
 
     // font-size
     --fs-xsmall: #{rem(14)};
